--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="./lib/main.js"></script>
 </head>
 <body>
-<input id="text" type="text" value="https://mini.chidaoni.com/m1000021/7/m?id=ppUphIgl" style="width:80%" /><br />
+<input id="text" type="text" value="https://www.baidu.com" style="width:80%" /><br />
 <div id="qrcode" style="width:200px; height:200px; margin-top:15px;"></div>
 <script type="text/javascript">
 	const elText = document.getElementById("text");
